--- a/Styles/index.css
+++ b/Styles/index.css
@@ -7,9 +7,14 @@
   --color-4: burlywood;
   --color-5: lightgrey;
 }
+
 /*font color, background color and font style*/
-html,
-body {
+*{
+  margin: 0;
+  margin-bottom: 15px;
+  padding: 0px;
+}
+html, body {
   font-family: Georgia, "Times New Roman", Times, serif;
   background: var(--color-5);
   color: var(--color-2);
@@ -101,7 +106,7 @@ h3 {
   background: white;
   color: var(--color-2);
   border-radius: 20px;
-  margin-top: 20px;
+  margin-bottom: 0;
 }
 
 .Originalrecipe:hover {
